@@ -52,6 +52,8 @@ dependencies {
 
 ## Usage
 
+> :warning: When using Java 9 or later, some JDK internals must be exposed by adding `--add-opens=java.base/java.nio=ALL-UNNAMED` to your JVM arguments.
+
 To start with the client, import the `com.influxdb.v3.client` package and create a `InfluxDBClient` by:
 
 ```java
